# h1v2-Isaac

./: .git-blame-ignore-revs  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
deploy/: MJDATA.TXT  debug_real.py  sim2real.py  sim2sim.py
deploy/config/: config.yaml
deploy/controllers/: rl.py
deploy/eval/: eval_policy.py  plot_metrics.py  safety_checker.py
deploy/policies/golden/: env.yaml
deploy/policies/rand/: env.yaml
deploy/policies/unitree/: policy.pt
deploy/robots/: h12_mujoco.py  h12_real.py  unitree_sdk2py_bridge.py
deploy/simulator/: sim_mujoco.py
deploy/utils/: logger.py  mj_logger.py  rl_logger.py  rotation.py
docker/: Dockerfile
scripts/clean_rl/: cli_args.py  play.py  train.py
scripts/deploy/: config.yaml  log_data.py  sim2real.py  sim2sim.py
scripts/deploy/policies/rand/: policy.onnx
scripts/deploy/policies/success_1/: env.yaml  policy.onnx
scripts/deploy/policies/success_2/: policy.onnx
scripts/deploy/policies/unitree/: env.yaml
scripts/rsl_rl/: cli_args.py  play.py  train.py
scripts/slurm/: nvidia_usd_seeds_batch.slurm  urdf_armature_usd_seeds_batch.slurm  urdf_usd_seeds_batch.slurm
slurm/: base_job.sh  batch_play.sh  rsl_job.sh
source/biped_assets/biped_assets/robots/: h12.py
source/biped_assets/biped_assets/scripts/: convert_urdf_edited.py
source/biped_tasks/biped_tasks/tasks/locomotion/velocity/: velocity_env_cfg.py
source/biped_tasks/biped_tasks/tasks/locomotion/velocity/config/h1/: rough_env_cfg.py
source/biped_tasks/biped_tasks/tasks/locomotion/velocity/config/h12_12dof/: __init__.py  cat_env_cfg.py  flat_env_cfg.py  rough_env_cfg.py  rsl_env_cfg.py
source/biped_tasks/biped_tasks/tasks/locomotion/velocity/config/h12_12dof/agents/: clean_rl_ppo_cfg.py  rsl_rl_ppo_cfg.py
source/biped_tasks/biped_tasks/tasks/locomotion/velocity/config/h12_27dof/: __init__.py  cat_env_cfg.py  rough_env_cfg.py  rsl_env_cfg.py
source/biped_tasks/biped_tasks/tasks/locomotion/velocity/config/h12_27dof/agents/: clean_rl_ppo_cfg.py
source/biped_tasks/biped_tasks/tasks/locomotion/velocity/mdp/: rewards.py
source/biped_tasks/biped_tasks/utils/actuators/: actuator_cfg.py  actuator_pd.py
source/biped_tasks/biped_tasks/utils/cat/: cat_env.py  constraint_manager.py  constraints.py  curriculums.py
source/biped_tasks/biped_tasks/utils/cleanrl/: ppo.py
source/biped_tasks/biped_tasks/utils/history/: circular_buffer.py  manager_term_cfg.py  observation_manager.py
source/biped_tasks/biped_tasks/utils/mdp/: commands.py  config_exporter.py  events.py  rewards.py  terrains.py
source/h1_assets/h1_assets/h1_usd/: config.yaml
source/h1_assets/h1_assets/h1_usd/configuration/: h1_physics.usd
source/h1_assets/h1_assets/robots/: h1.py  h1v2.py
source/h1_extension/h1_extension/tasks/locomotion/velocity/: velocity_env_cfg.py
source/h1_extension/h1_extension/tasks/locomotion/velocity/config/h1/: __init__.py  nvidia_usd_rough_env_cfg.py  urdf_armature_usd_flat_env_cfg.py  urdf_armature_usd_rough_env_cfg.py  urdf_usd_flat_env_cfg.py  urdf_usd_rough_env_cfg.py
source/h1_extension/h1_extension/tasks/locomotion/velocity/config/h12_12dof/: cat_env_cfg.py
source/h1_extension/h1_extension/tasks/locomotion/velocity/config/h1_2/: flat_env_cfg.py
source/h1_extension/h1_extension/tasks/locomotion/velocity/config/h1_2_12dof/: flat_env_cfg.py  rough_env_cfg.py
source/h1_extension/h1_extension/utils/cat/: cat_env.py  constraint_manager.py
source/h1_extension/h1_extension/utils/cleanrl/: ppo.py
