[project]
name = "h1v2-isaac"
version = "0.1.0"
description = "Reinforcement Learning pipeline for the h1v2"
readme = "README.md"
authors = [{ name = "Côme Perrot", email = "cperrot@laas.fr" }]
requires-python = ">=3.10"
dependencies = ["biped-tasks", "biped-deploy"]

[tool.uv.workspace]
members = [
    "packages/biped_assets",
    "packages/biped_tasks",
    "packages/biped_deploy",
]

[tool.uv.sources]
biped-tasks = { workspace = true }
biped-deploy = { workspace = true }

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# E402: Module level import not at top of file
# RET504: Unnecessary variable assignment before return statement.
# SIM102: Use a single if-statement instead of nested if-statements
ignore = ["COM812", "D203", "D213", "E402", "RET504", "SIM102"]
extend-select = [
    "A",
    "B",
    "C",
    "COM",
    "DJ",
    "EM",
    "EXE",
    "G",
    # "PTH",
    "RET",
    "RUF",
    "SIM",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "isaaclab",
    "first-party",
    "local-folder",
]
extra-standard-library = [
    "numpy",
    "h5py",
    "open3d",
    "torch",
    "tensordict",
    "bpy",
    "matplotlib",
    "gymnasium",
    "gym",
    "scipy",
    "hid",
    "yaml",
    "prettytable",
    "toml",
    "trimesh",
    "tqdm",
    "psutil",
]
known-third-party = [
    "isaacsim.core.api",
    "omni.replicator.core",
    "pxr",
    "omni.kit.*",
    "warp",
    "carb",
    "Semantics",
]
known-first-party = [
    "biped_tasks",
    "biped_assets",
    "biped_deploy",
]

[tool.ruff.lint.isort.sections]
isaaclab = [
    "isaaclab",
    "isaaclab_tasks",
    "isaaclab_assets",
    "isaaclab_mimic",
    "isaaclab_rl"
]

[tool.tomlsort]
all = true

[tool.pyright]
exclude = ["**/__pycache__", "**/logs", ".git", ".vscode"]
typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "warning"
reportPrivateUsage = "warning"
